# dplog

./: .gitignore  README.md  build_edge_mac.sh  build_edge_windows.ps1  test_close.html  test_desktop.sh  test_desktop_windows.ps1  작업일지_SEO_엔진_최적화.md
ai-worker/: pyproject.toml  requirements.txt  test_bedrock.py
ai-worker/app/: config.py  main.py
ai-worker/app/routers/: health.py
backend/: build.gradle  settings.gradle
backend_python/: check_api_quota.py  curl_test2.json  curl_test_output.json  fix_href_syntax.py  fix_skeleton_and_scraper.py  main.py  measure_traffic.py  patch_db.py  patch_extractor_container_scroll.py  patch_extractor_images.py  patch_extractor_perfect_images.py  patch_network_interceptor.py  print_stores.py  requirements.txt  rewrite_extractor.py  test_ad2.txt  test_graphql.json  test_naver_json.py  test_oracle_scraper.py  test_run_engine_debug.py
backend_spring/: .gitignore  build.gradle  settings.gradle
docs/: SAAS_REVIEW_REPORT_V13.md  onboarding_flow.md  store-diagnosis-flow.md
frontend_dplog/: README.md  fix_viewmodel.py  middleware.ts  next.config.ts  package-lock.json  package.json  patch_auto_province.py  patch_grid_to_list.py  patch_img.py  patch_ui.py  patch_ui2.py  patch_ui_gps.py  rewrite_realtime_rank_layout.py
frontend_next/: README.md  next.config.ts  package-lock.json  package.json
frontend_vite_backup/: index.html  package-lock.json  package.json
nomadscrap-server/: Dockerfile  build.gradle
scripts/: debug_output.html  dplog_gui.py  external_script.py  fix_align.py  fix_all.py  fix_exif.py  fix_indentation.py  (+18 more)
(+2312 files in other folders)
